Added StackOverflow page to #Portfolio

--- a/index.html
+++ b/index.html
@@ -69,16 +69,20 @@
           </span>
           <div class="col-6">
             <p>Between growing up in Germany to hanging out in Montreal, studying in Kansas - then Beirut-, advocacy and designing
-              in D.C. to banking and finance & now FINALLY developing in AZ I've tried my hand at a little bit of everything. I've managed
-              to take part in the variety of human experiences & want to put that to work for you.</p>
+              in D.C. to banking and finance & now FINALLY developing in AZ I've tried my hand at a little bit of everything.
+              I've managed to take part in the variety of human experiences & want to put that to work for you.</p>
             <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
-              apart websites to see how they work. I haven't stopped learning since and recently completed the University of
-              Arizona's Full-stack Developer program.</p>
+              apart websites to see how they work. I haven't stopped learning since and recently completed the University
+              of Arizona's Full-stack Developer program.</p>
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>Most recently I've started working in robotics and systems automation, helping BNP Paribas subsidiary Bank of the West with Robotics Process Automation (RPA). This entails "turning the computer in-on-itself" to perform tasks currently done by a human user and achieved using mainly Visual Basic, C#, JavaScript, SQL database manipulation.</p>
-            <p>To grow my robotics aptitude I'm currently taking courses in Machine and Deep Learning, and seeking to master TensorFlow.</p>
+            <p>Most recently I've started working in robotics and systems automation, helping BNP Paribas subsidiary Bank of
+              the West with Robotics Process Automation (RPA). This entails "turning the computer in-on-itself" to perform
+              tasks currently done by a human user and achieved using mainly Visual Basic, C#, JavaScript, SQL database manipulation.</p>
+            <p>To grow my robotics aptitude I'm currently taking courses in Machine and Deep Learning, and seeking to master
+              TensorFlow.
+            </p>
             <br>
             <hr>
           </div>
@@ -754,8 +758,7 @@
           <div class="effect">
             <a href="https://expo.io/snacks/@itsokayitsofficial" target="_blank">
               <br>
-              <img class="img-responsive" src="https://d1wp6m56sqw74a.cloudfront.net/~assets/eac9cc0fbd5a7deb0bd90a2b2a787a1f"
-                alt="">
+              <img class="img-responsive" src="https://d1wp6m56sqw74a.cloudfront.net/~assets/eac9cc0fbd5a7deb0bd90a2b2a787a1f" alt="">
             </a>
             <figcaption>
               <div>
@@ -805,12 +808,26 @@
           <div class="effect">
             <a href="https://imgur.com/a/vbD4Q" target="_blank">
               <br>
-              <img class="img-responsive" src="https://i.imgur.com/RZfgbVH.jpg"
-                alt="">
+              <img class="img-responsive" src="https://i.imgur.com/RZfgbVH.jpg" alt="">
             </a>
             <figcaption>
               <div>
                 <p>Imgur Gifs (self made)</p>
+              </div>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- Stack Overflow -->
+        <div class="col-4">
+          <div class="effect">
+            <a href="https://stackoverflow.com/users/8277656/alex-p" target="_blank">
+              <br>
+              <img src="https://stackoverflow.com/users/flair/8277656.png?theme=clean" width="85%" alt="">
+            </a>
+            <figcaption>
+              <div>
+                <p>Stack Overflow Answers</p>
               </div>
             </figcaption>
           </div>
@@ -844,12 +861,6 @@
               <li>
                 <a href="https://www.linkedin.com/in/alexander-pugh/" target="_blank">
                   <img class="link" src="assets/img/icons/linkedin1.svg">
-                </a>
-              </li>
-              <!-- twitter -->
-              <li>
-                <a href="https://twitter.com/okayitsofficial" target="_blank">
-                  <img class="link" src="assets/img/icons/twitter1.svg">
                 </a>
               </li>
               <!-- email -->
