Spelling of description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="descption" content="ItsOkayItsOfficial! The Official portfolio of Alex P, full-stack web & robotics developer and known human.">
+  <meta name="description" content="ItsOkayItsOfficial! The Official portfolio of Alex P, full-stack web & robotics developer and known human.">
   <meta name="author" content="Alex P">
   <link rel="shortcut icon" href="assets/img/logo.png">
 
