Updated preload references to meet new 'as=' specs

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
   <title>Alex P | Web Developer</title>
 
+  <!-- Preloads -->
   <link rel="preload" href="assets/js/custom.js" as="script">
-  <link rel="preload" href="assets/css/style.css" as="stylesheet">
-  <link rel="preload" href="assets/css/hover.css" as="stylesheet">
+  <link rel="preload" href="assets/css/style.css" as="style">
   <link rel="preload" href="assets/img/ajp2.jpg" as="image">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/hover.css">
+  
 </head>
 
 <body>
