--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-  
+
 </head>
 
 <body>
@@ -72,16 +72,15 @@
               in D.C. to banking and finance & now FINALLY developing in AZ I've tried my hand at a little bit of everything.
               I've managed to take part in the variety of human experiences & want to put that to work for you.</p>
             <p>I taught myself programming playing around with internet based virtual worlds and picked up markup by taking
-              apart websites to see how they work. I haven't stopped learning since and recently completed the University
-              of Arizona's Full-stack Developer program.</p>
+              apart websites to see how they work. I haven't stopped learning since, even having completed the University
+              of Arizona's Full-stack Developer program in 2017.</p>
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>Most recently I've started working in robotics and systems automation, helping BNP Paribas subsidiary Bank of
-              the West with Robotics Process Automation (RPA). This entails "turning the computer in-on-itself" to perform
-              tasks currently done by a human user and achieved using mainly Visual Basic, C#, JavaScript, SQL database manipulation.</p>
-            <p>To grow my robotics aptitude I'm currently taking courses in Machine and Deep Learning, and seeking to master
-              TensorFlow.
+            <p>Currently I'm a Senior Software Engineer at BNP Paribas subsidiary Bank of
+              the West, where I serve as the Lead Developer on the Intelligent Automation & Robotics Program. The "robotics" work mainly entails "turning the computer in-on-itself" to perform
+              tasks currently done by a human user, usually achieved using Visual Basic, C#, JavaScript, and SQL database manipulation.</p>
+            <p>To grow my developer skillz I'm currently taking courses in Machine and Deep Learning, and kicking around in Golang.
             </p>
             <br>
             <hr>
@@ -149,7 +148,7 @@
                 <br>
                 <small>C# (.NET)</small>
                 <br>
-                <small>1 yr | current</small>
+                <small>2 yr | current</small>
               </span>
             </a>
             <a class="random">
