--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- /.col-4 -->
         <div class="col-8">
           <span class="aboutHeader">
-            <h1>Certified Robotics & Full-Stack Developer</h1>
+            <h1>Certified Robotics Developer & Software Engineer</h1>
             <img id="BPCert" src="https://image-store.slidesharecdn.com/56cf937b-1dec-4ffb-b00d-3e452700dd72-original.jpeg">
           </span>
           <div class="col-6">
@@ -80,7 +80,7 @@
             <p>Currently I'm a Senior Software Engineer at BNP Paribas subsidiary Bank of
               the West, where I serve as the Lead Developer on the Intelligent Automation & Robotics Program. The "robotics" work mainly entails "turning the computer in-on-itself" to perform
               tasks currently done by a human user, usually achieved using Visual Basic, C#, JavaScript, and SQL database manipulation.</p>
-            <p>To grow my developer skillz I'm currently taking courses in Machine and Deep Learning, and kicking around in Golang.
+            <p>To grow my developer skillz I'm currently taking courses in Machine and Deep Learning (like everyone else), and kicking around in Golang and Dart.
             </p>
             <br>
             <hr>
