--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- /.col-4 -->
         <div class="col-8">
           <span class="aboutHeader">
-            <h1>Certified Robotics Developer & Software Engineer</h1>
+            <h1>Software Engineer</h1>
             <img id="BPCert" src="https://image-store.slidesharecdn.com/56cf937b-1dec-4ffb-b00d-3e452700dd72-original.jpeg">
           </span>
           <div class="col-6">
