Added logos to #info section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,23 @@
   <body>
     <div id="main">
       <div id="canvas"></div>
-      <div id="info"></div>
+
+      <div id="info">
+        <h1>Alexander Pugh</h1>
+
+        <div id="logos">
+          <a>
+            <img class="logo" src="assets/img/gh_logo.png" />
+          </a>
+          <a>
+            <img class="logo" src="assets/img/lkn_logo.png" />
+          </a>
+        </div>
+        <!-- /#logos -->
+      </div>
+      <!-- /#info -->
     </div>
+    <!-- /#main-->
 
     <!-- Custom scripts -->
     <script src="assets/js/scripts.js"></script>
