--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
           </div>
           <!-- /.col-6 -->
           <div class="col-6">
-            <p>Currently I'm a Senior Software Engineer at BNP Paribas subsidiary Bank of
-              the West, where I serve as the Lead Developer on the Intelligent Automation & Robotics Program. The "robotics" work mainly entails "turning the computer in-on-itself" to perform
-              tasks currently done by a human user, usually achieved using Visual Basic, C#, JavaScript, and SQL database manipulation.</p>
+            <p>Currently I'm a Software Engineer at Albertsons Companies, where I serve as Technical Lead for the Digital Workforce and Nation Service Center. In this role I'm in charge of the code health and implmentation for robitcs and cognative services.</p>
             <p>To grow my developer skillz I'm currently taking courses in Machine and Deep Learning (like everyone else), and kicking around in Golang and Dart.
             </p>
             <br>
