--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <h1>Alexander Pugh</h1>
 
         <div id="logos">
-          <a>
+          <a href="https://github.com/ItsOkayItsOfficial" target="_tab">
             <img class="logo" src="assets/img/gh_logo.png" />
           </a>
-          <a>
+          |
+          <a href="https://linkedin.com/in/alexander-pugh/" target="_tab">
             <img class="logo" src="assets/img/lkn_logo.png" />
           </a>
         </div>
