corrected as .getContext can only be applied to canvas element

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </head>
 
   <body>
-    <div id="main">
-      <div id="canvas"></div>
+    <canvas id="canvas"></canvas>
 
+    <div id="main">
       <div id="info">
         <h1>Alexander Pugh</h1>
 
