console fun working

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <div id="main">
       <div id="info">
         <h1>Alexander Pugh</h1>
-
         <div id="logos">
           <a href="https://github.com/ItsOkayItsOfficial" target="_tab">
             <img class="logo" src="assets/img/gh_logo.png" />
@@ -36,6 +35,7 @@
           <a href="https://linkedin.com/in/alexander-pugh/" target="_tab">
             <img class="logo" src="assets/img/lkn_logo.png" />
           </a>
+          <a href="itsokayitsofficial@gmail.com"></a>
         </div>
         <!-- /#logos -->
       </div>
