segmented Console Fun into it's own file

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
 
     <!-- Custom scripts -->
     <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/console.js"></script>
   </body>
 </html>
