--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="main">
       <div id="info">
-        <h1>Alexander Pugh</h1>
+        <h1 id="name">Alexander Pugh</h1>
         <div id="logos">
           <a href="https://github.com/ItsOkayItsOfficial" target="_tab">
             <img class="logo" src="assets/img/gh_logo.png" />
