--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <h1 id="name">Alexander Pugh</h1>
         <div id="logos">
           <a href="https://github.com/ItsOkayItsOfficial" target="_tab">
-            <img class="logo" src="assets/img/gh_logo.png" />
+            <img class="logo" src="assets/img/github_mark.svg" />
           </a>
           |
           <a href="https://linkedin.com/in/alexander-pugh/" target="_tab">
-            <img class="logo" src="assets/img/lkn_logo.png" />
+            <img class="logo" src="assets/img/linkedin-mark.svg" />
           </a>
           <a href="itsokayitsofficial@gmail.com"></a>
         </div>
