removed logos and linking

--- a/index.html
+++ b/index.html
@@ -28,13 +28,8 @@
       <div id="info">
         <h1 id="name">Alexander Pugh</h1>
         <div id="logos">
-          <a href="https://github.com/ItsOkayItsOfficial" target="_tab">
-            <img class="logo" src="assets/img/github_mark.svg" />
-          </a>
-          |
-          <a href="https://linkedin.com/in/alexander-pugh/" target="_tab">
-            <img class="logo" src="assets/img/linkedin-mark.svg" />
-          </a>
+          <a href="https://github.com/ItsOkayItsOfficial"></a>
+          <a href="https://linkedin.com/in/alexander-pugh/"></a>
           <a href="itsokayitsofficial@gmail.com"></a>
         </div>
         <!-- /#logos -->
