--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="logos">
           <a href="https://github.com/ItsOkayItsOfficial"></a>
           <a href="https://linkedin.com/in/alexander-pugh/"></a>
-          <a href="itsokayitsofficial@gmail.com"></a>
+          <a href="alexp@itsokayitsofficial.io"></a>
         </div>
         <!-- /#logos -->
       </div>
