--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div id="info">
         <h1 id="name">Alexander Pugh</h1>
         <div id="logos">
-          <a href="https://github.com/ItsOkayItsOfficial"></a>
-          <a href="https://linkedin.com/in/alexander-pugh/"></a>
-          <a href="alexp@itsokayitsofficial.io"></a>
+          <a href="https://github.com/ItsOkayItsOfficial">GitHub</a>
+          <a href="https://linkedin.com/in/alexander-pugh/">LinkedIn</a>
+          <a href="mailto:alexp@itsokayitsofficial.io">Email</a>
         </div>
         <!-- /#logos -->
       </div>
