--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="logos">
           <a href="https://github.com/ItsOkayItsOfficial">GitHub</a>
           <a href="https://linkedin.com/in/alexander-pugh/">LinkedIn</a>
-          <a href="mailto:alexp@itsokayitsofficial.io">Email</a>
+          <a href="alexp@itsokayitsofficial.io">Email</a>
         </div>
         <!-- /#logos -->
       </div>
